[package]
name = "buffer-bench"
version = "0.1.0"
authors = ["Colin Rofls <colin@cmyr.net>"]

[dependencies]
xi-rope = "0.2"
ropey = "0.9.2"

[dependencies.xi_rope_master]
path = "./xi_rope_master"

[dependencies.xi_rope_rc]
path = "./xi_rope_rc"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "buffer"
harness = false
